--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.15)
 include(plugin_helper.cmake)
 
 # Build individual SEM modules
-add_subdirectory(AGain)
+add_subdirectory(Arpeggiator)
 add_subdirectory(BoolInverter)
 add_subdirectory(BPMClock3)
 add_subdirectory(ControlsXp)
@@ -11,8 +11,8 @@ add_subdirectory(Converters)
 add_subdirectory(EnvelopeAdsr)
 add_subdirectory(Filters)
 add_subdirectory("FIR Filters")
+add_subdirectory("Guitar De Channelizer")
 add_subdirectory(FloatLimiter)
-add_subdirectory(Gain)
 add_subdirectory(ImpulseResponse)
 add_subdirectory(Increment3)
 add_subdirectory(Inverter)
@@ -38,6 +38,7 @@ add_subdirectory(SubControlsXp)
 add_subdirectory(Switches)
 add_subdirectory("System Command")
 add_subdirectory(Triggerator)
+# not workin ATM add_subdirectory(Unison)
 add_subdirectory(UnisonFix)
 add_subdirectory(UserSetting)
 add_subdirectory(VaFilters)
