chore(se) : sync more w SE15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(BoolInverter)
 add_subdirectory(BPMClock3)
 add_subdirectory(ControlsXp)
 add_subdirectory(Converters)
+add_subdirectory(Diagnostic)
 add_subdirectory(EnvelopeAdsr)
 add_subdirectory(Filters)
 add_subdirectory("FIR Filters")
